--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -1,12 +1,12 @@
 name: 'Publish'
-description: 'Publish an SDK to NPM'
+description: 'Publish a package to NPM'
 inputs:
-  sdk:
-    description: "name of an SDK"
+  package:
+    description: "name of the package"
     required: true
   version:
-    description: "name of the framework to install"
-    default: 'patch'
+    description: "version type"
+    required: true
 runs:
   using: "composite"
   steps:
@@ -26,17 +26,17 @@ runs:
         echo "::group::Create temp branch"
         GH_REF=${{github.ref}}
         CURRENT_BRANCH=${GH_REF#refs/heads/}
-        BRANCH="${{inputs.sdk}}_$(date +%F_%H-%M)"
+        BRANCH="${{inputs.package}}_$(date +%F_%H-%M)"
         git checkout -b $BRANCH
         git push -u origin $BRANCH
         echo "::endgroup::"
 
-        echo "::group::Publish ${{inputs.sdk}}"
-        cd "packages/${{inputs.sdk}}"
+        echo "::group::Publish ${{inputs.package}}"
+        cd "packages/${{inputs.package}}"
         git status
         yarn install
         git status
-        yarn deps
+        npm run deps --if-present
         git status
         yarn publish "--${{inputs.version}}" --access public
         git status
