--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,10 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     outputs:
-      sdk-matrix: ${{steps.setup.outputs.sdk-matrix}}
       packages: ${{steps.setup.outputs.packages}}
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/setup-matrix
+      - uses: ./.github/actions/parser
         id: setup
         with:
           packages: ${{github.event.inputs.packages}}
@@ -35,7 +34,7 @@ jobs:
 
   utils:
     needs: setup
-    if: ${{!fromJSON(needs.setup.outputs.packages).utils.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).utils}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -55,7 +54,7 @@ jobs:
           version: ${{fromJSON(needs.setup.outputs.packages).utils.releaseVersion}}
   snippets:
     needs: setup
-    if: ${{!fromJSON(needs.setup.outputs.packages).snippets.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).snippets}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -76,7 +75,7 @@ jobs:
 
   logger:
     needs: [setup, utils]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).logger.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).logger && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -93,10 +92,10 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).logger.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).logger.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).logger.releaseVersion}}
   screenshoter:
     needs: [setup, utils]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).screenshoter.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).screenshoter && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -113,10 +112,10 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).screenshoter.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).screenshoter.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).screenshoter.releaseVersion}}
   driver:
     needs: [setup, utils, snippets]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).driver.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).driver && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -133,11 +132,11 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).driver.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).driver.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).driver.releaseVersion}}
 
   api:
     needs: [setup, utils, logger]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).api.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).api && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -154,10 +153,10 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).api.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).api.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).api.releaseVersion}}
   core:
     needs: [setup, driver, screenshoter, snippets]
-    if: ${{!fromJSON(needs.setup.outputs.packages).core.skip && !failure() && !cancelled()}}
+    if: ${{fromJSON(needs.setup.outputs.packages).core && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -174,11 +173,11 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).core.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).core.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).core.releaseVersion}}
 
   vgc:
     needs: [setup, core]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).vgc.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).vgc && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -195,11 +194,11 @@ jobs:
         uses: ./.github/actions/release
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).vgc.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).vgc.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).vgc.releaseVersion}}
 
   playwright:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).playwright.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).playwright && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -218,7 +217,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).playwright.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).playwright.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).playwright.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -229,7 +228,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).playwright.package}}/coverage-test-report.xml
   puppeteer:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).puppeteer.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).puppeteer && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -248,7 +247,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).puppeteer.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).puppeteer.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).puppeteer.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -259,7 +258,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).puppeteer.package}}/coverage-test-report.xml
   webdriverio:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).webdriverio.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).webdriverio && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -278,7 +277,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).webdriverio.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).webdriverio.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).webdriverio.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -289,7 +288,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).webdriverio.package}}/coverage-test-report.xml
   webdriverio-legacy:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).webdriverio-legacy.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).webdriverio-legacy && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -308,7 +307,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).webdriverio-legacy.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).webdriverio-legacy.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).webdriverio-legacy.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -319,7 +318,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).webdriverio-legacy.package}}/coverage-test-report.xml
   selenium:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).selenium.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).selenium && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -338,7 +337,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).selenium.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).selenium.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).selenium.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -349,7 +348,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).selenium.package}}/coverage-test-report.xml
   protractor:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).protractor.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).protractor && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -368,7 +367,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).protractor.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).protractor.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).protractor.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -379,7 +378,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).protractor.package}}/coverage-test-report.xml
   nightwatch:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).nightwatch.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).nightwatch && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -398,7 +397,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).nightwatch.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).nightwatch.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).nightwatch.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -409,7 +408,7 @@ jobs:
             packages/${{fromJSON(needs.setup.outputs.packages).nightwatch.package}}/coverage-test-report.xml
   testcafe:
     needs: [setup, utils, api, core, vgc]
-    if: ${{!failure() && !cancelled() && !fromJSON(needs.setup.outputs.packages).testcafe.skip}}
+    if: ${{fromJSON(needs.setup.outputs.packages).testcafe && !failure() && !cancelled()}}
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -428,7 +427,7 @@ jobs:
         uses: ./.github/actions/release
         with:
           sdk: ${{fromJSON(needs.setup.outputs.packages).testcafe.package}}
-          version: ${{fromJSON(needs.setup.outputs.packages).testcafe.release-version}}
+          version: ${{fromJSON(needs.setup.outputs.packages).testcafe.releaseVersion}}
       - name: Save release and testing artifacts
         uses: actions/upload-artifact@v2
         with:
