--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -59,7 +59,7 @@
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml -f sdks='wdio wdio:cdp wdio@6 wdio@5' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:test": "gh workflow run test.yml -f sdks='wdio wdio+cdp wdio@6 wdio@5' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
     "gh:publish": "gh workflow run publish.yml -f sdks='wdio'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
