--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -50,8 +50,8 @@
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-playwright'",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml -f sdks='playwright' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
-    "gh:publish": "gh workflow run publish.yml -f sdks='playwright'",
+    "gh:test": "gh workflow run test.yml -f packages='playwright' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f packages='playwright'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
