--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -57,8 +57,8 @@
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml -f sdks='protractor' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
-    "gh:publish": "gh workflow run publish.yml -f sdks='protractor'",
+    "gh:test": "gh workflow run test.yml -f packages='protractor' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f packages='protractor'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
