--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -53,8 +53,8 @@
     "docker:rebuild": "docker build --no-cache -t applitools/puppeteer-chrome .",
     "docker:run": "yarn docker:build && docker run -e NODE_AUTH_TOKEN --env APPLITOOLS_API_KEY=$APPLITOOLS_API_KEY_SDK --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' --env APPLITOOLS_BATCH_ID=$(uuidgen) --env XUNIT_FILE=coverage-test-report.xml -it --init --rm -v $(pwd):/sandbox applitools/puppeteer-chrome",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml -f sdks='puppeteer' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
-    "gh:publish": "gh workflow run publish.yml -f sdks='puppeteer'",
+    "gh:test": "gh workflow run test.yml -f packages='puppeteer' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f packages='puppeteer'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
